--- a/ajedrez.html
+++ b/ajedrez.html
@@ -20,10 +20,12 @@
 		<div id="container"></div>
 
 		<!-- Scripts de biblioteca -->
+		
 		<script src="lib/three.min_r96.js"></script>
 		<script src="lib/OrbitControls.js"></script>
 		<script src="lib/tween_18.js"></script>
 		<script src="lib/dat.gui.min.js"></script>
+		<script src="lib/GLTFLoader.js"></script>
 
         <!-- Mi script --> 
 		<script src="threejs/ajedrez.js"></script>
